<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="viewModel" type="org.thinc.comprog.letsmeet.feature.createparty.CreatePartyViewModel"/>
        <import type="android.view.View"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/constraintLayout">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:text="@={viewModel.topic}"
                android:id="@+id/create_party_topic"
                android:hint="Topic"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/create_party_isPublic" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar3"/>
        <TextView
                android:text="Date :"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/create_party_date"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textSize="18sp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/create_party_topic"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{v -> viewModel.datePickerDialog(v)}"
                android:id="@+id/button7" app:layout_constraintStart_toEndOf="@+id/create_party_date"
                android:text="@{viewModel.date ?? @string/choose_date}"
                android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/create_party_date"/>
        <TextView
                android:text="Time :"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/create_party_time"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textSize="18sp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/create_party_date"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{v -> viewModel.timePickerDialog(v)}"
                android:id="@+id/button8" app:layout_constraintStart_toEndOf="@+id/create_party_time"
                android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/create_party_time"
                android:text="@{viewModel.time ?? @string/choose_time}"/>
        <TextView
                android:text="Location :"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/create_party_location_text"
                android:textSize="18sp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/create_party_time" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <Button
                android:text="@{viewModel.locationText ?? @string/choose_location}"
                android:id="@+id/create_party_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/create_party_location_text"
                android:layout_marginStart="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/create_party_location_text"/>
        <Switch
                android:text="@string/make_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/create_party_isPublic"
                tools:checked="false" android:checked="@={viewModel.myUnbox(viewModel.public)}"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/create_party_topic"/>
        <Button
                android:text="@string/create_button"
                android:onClick="@{v -> viewModel.createParty(v)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/create_party_button"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" android:visibility="gone"/>
        <Button
                android:text="@string/edit_button"
                android:onClick="@{v -> viewModel.editParty(v)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_party_button"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" android:visibility="gone"/>
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:map="http://schemas.android.com/apk/res-auto"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:id="@+id/create_party_map"
                  android:name="com.google.android.gms.maps.SupportMapFragment"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  tools:context=".feature.location.MapsActivity"
                  map:layout_constraintTop_toBottomOf="@+id/create_party_location" android:layout_marginBottom="8dp"
                  map:layout_constraintBottom_toTopOf="@+id/create_party_button" android:layout_marginEnd="8dp"
                  map:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                  map:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"/>
        <androidx.appcompat.widget.Toolbar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:theme="?attr/actionBarTheme"
                android:minHeight="?attr/actionBarSize"
                android:id="@+id/toolbar3" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
